@@ -5,12 +5,9 @@ module Autotest::RedGreen
   BAR = "=" * 80
 
   Autotest.add_hook :ran_command do |at|
-    output = at.results.join
-    at.results.each do |line|
-      line.gsub!(/^.* (\d+) failures, (\d+) errors$/) { |match|
-        code = ($1 != "0" or $2 != "0") ? 31 : 32
-        "\e[#{code}m#{BAR}\n#{match}\e[0m\n\n"
-      }
+    if at.results.last.match(/^.* (\d+) failures, (\d+) errors$/)
+      code = ($1 != "0" or $2 != "0") ? 31 : 32
+      puts "\e[#{code}m#{BAR}\e[0m\n\n"
     end
   end
 end
